--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "vitest",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lighthouse": "lhci autorun"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -18,6 +19,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@flydotio/dockerfile": "^0.5.9",
+    "@lhci/cli": "^0.14.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/react": "^18.3.3",
@@ -28,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "jsdom": "^25.0.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
